--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Roboto&display=swap"
       rel="stylesheet"
     />
+
     <title>Alberto Torrigiotti</title>
   </head>
   <body>
