--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Roboto&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta&display=swap"
+      rel="stylesheet"
+    />
     <title>Alberto Torrigiotti</title>
   </head>
   <body>
